# doshomik

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/doshomik/: __init__.py  _constants.py  _exceptions.py  _format.py  _parse.py  _tokens.py
tests/: test_exceptions.py  test_format.py  test_parse.py  test_roundtrip.py  test_tokens.py
tests/fixtures/: real_world_samples.txt
