[project]
name = "doshomik"
version = "0.1.0"
description = "Parse and format South Asian numeric strings (Bangla/English, lakh-crore system)."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Rayhan Mahmud", email = "rayhan.mahmuud@gmail.com" }
]
requires-python = ">=3.10"
keywords = ["bangla", "bengali", "bangladesh", "numbers", "lakh", "crore", "parsing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Bengali",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = []

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/rayhanmahmuud/doshomik"
Issues = "https://github.com/rayhanmahmuud/doshomik/issues"
Changelog = "https://github.com/rayhanmahmuud/doshomik/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "hypothesis>=6.152.1",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/doshomik"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=doshomik --cov-report=term-missing"
testpaths = ["tests"]
